tests/errors/generic_bounds.vt
fn f<T: int>(x: T): T { return x; }
fn main() {}
